--- a/app/src/main/res/layout/activity_student_profile.xml
+++ b/app/src/main/res/layout/activity_student_profile.xml
@@ -1,6 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/Layout_Background"
+    android:orientation="vertical"
+    >
+<!-- Top card view start (now inside AppBarLayout) -->
+<com.google.android.material.card.MaterialCardView
+    android:id="@+id/topCardView"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    app:layout_scrollFlags="scroll|enterAlways"
+    app:cardBackgroundColor="@color/Theme_green"
+    app:cardElevation="8dp"
+    app:cardPreventCornerOverlap="true"
+    app:shapeAppearanceOverlay="@style/CustomCardShape">
+
+    <!-- ConstraintLayout for your two images (left nav_bar and center new_home_top) -->
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <!-- ImageView for nav_bar on the left -->
+        <ImageView
+            android:id="@+id/leftNavBarImage"
+            android:layout_width="26dp"
+            android:layout_height="22dp"
+            android:layout_marginStart="20dp"
+            android:adjustViewBounds="true"
+            android:contentDescription="@null"
+            android:scaleType="fitCenter"
+            android:scaleX="1.5"
+            android:scaleY="1.5"
+            android:src="@drawable/back"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <!-- ImageView for new_home_top in the center -->
+        <ImageView
+            android:id="@+id/selectRoleTopImage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="-60dp"
+            android:adjustViewBounds="true"
+            android:scaleType="fitCenter"
+            android:contentDescription="@null"
+            android:src="@drawable/new_home_top"
+            android:scaleX="1"
+            android:scaleY="1"
+            app:layout_constraintStart_toEndOf="@id/leftNavBarImage"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.5" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</com.google.android.material.card.MaterialCardView>
+    <!-- Top card view ends -->
+<ScrollView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/Layout_Background"
@@ -33,7 +93,7 @@
                     android:layout_width="100dp"
                     android:layout_height="100dp"
                     android:layout_gravity="center_horizontal"
-                    android:src="@drawable/student_icon"
+                    android:src="@drawable/studentpp"
                     android:scaleType="centerCrop"
                     android:contentDescription="dp"
                     android:layout_marginBottom="16dp" />
@@ -182,7 +242,7 @@
             android:text="Edit Profile"
             android:layout_marginTop="24dp"
             android:layout_marginBottom="10dp"
-            android:textColor="@android:color/white"
+            android:textColor="@color/colorWhite"
             android:background="@drawable/button"
             android:padding="12dp"
             android:textStyle="bold"
@@ -208,3 +268,4 @@
     </LinearLayout>
 
 </ScrollView>
+</LinearLayout>
