--- a/app/src/main/res/layout/activity_teacher_calendar.xml
+++ b/app/src/main/res/layout/activity_teacher_calendar.xml
@@ -8,11 +8,77 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appBarLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <!-- Top card view start (now inside AppBarLayout) -->
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/topCardView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_scrollFlags="scroll|enterAlways"
+            app:cardBackgroundColor="@color/Theme_green"
+            app:cardElevation="8dp"
+            app:cardPreventCornerOverlap="true"
+            app:shapeAppearanceOverlay="@style/CustomCardShape">
+
+            <!-- ConstraintLayout for your two images (left nav_bar and center new_home_top) -->
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <!-- ImageView for nav_bar on the left -->
+                <ImageView
+                    android:id="@+id/leftNavBarImage"
+                    android:layout_width="26dp"
+                    android:layout_height="22dp"
+                    android:layout_marginStart="20dp"
+                    android:adjustViewBounds="true"
+                    android:contentDescription="@null"
+                    android:scaleType="fitCenter"
+                    android:scaleX="1.5"
+                    android:scaleY="1.5"
+                    android:src="@drawable/back"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <!-- ImageView for new_home_top in the center -->
+                <ImageView
+                    android:id="@+id/selectRoleTopImage"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="-60dp"
+                    android:adjustViewBounds="true"
+                    android:scaleType="fitCenter"
+                    android:contentDescription="@null"
+                    android:src="@drawable/new_home_top"
+                    android:scaleX="0.8"
+                    android:scaleY="0.8"
+                    app:layout_constraintStart_toEndOf="@id/leftNavBarImage"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintHorizontal_bias="0.5" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </com.google.android.material.card.MaterialCardView>
+        <!-- Top card view ends -->
+
+    </com.google.android.material.appbar.AppBarLayout>
+
     <!-- Fixed Header: Spinners Always Visible -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        android:layout_marginTop="60dp"
         android:padding="16dp"
         android:background="@color/Layout_Background"
         app:cardElevation="8dp">
