--- a/app/src/main/res/layout/std_nav_menu_layout.xml
+++ b/app/src/main/res/layout/std_nav_menu_layout.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/navMenuRoot"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="#97C93C"
     android:padding="16dp">
@@ -94,13 +94,43 @@
         android:contentDescription="@null"
         />
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1" />
+
+    <!-- Footer Content (Always at Bottom) -->
     <TextView
         android:id="@+id/hiText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hi,"
+        android:layout_gravity="center_horizontal"
+        android:text="Developed by Tauqir, Anindita and Nuri"
         android:textSize="14sp"
         android:textColor="#006A00" />
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/contacUscrd"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:cardCornerRadius="12dp"
+        android:layout_gravity="center_horizontal"
+        app:cardElevation="3dp"
+        app:cardBackgroundColor="#006A00"
+        app:cardUseCompatPadding="true"
+        android:layout_marginTop="6dp">
+
+        <Button
+            android:id="@+id/contacUs"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Contact Us"
+            android:textColor="@android:color/white"
+            android:textSize="12sp"
+            android:textStyle="bold"
+            android:backgroundTint="#006A00"
+            android:padding="6dp" />
+    </androidx.cardview.widget.CardView>
 
 
 
