--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,6 +20,10 @@
 
     <color name="primaryLight">#81C784</color>
     <color name="background">#FAFAFA</color>
+    <color name="colorPrimary">#2E7D32</color>
+    <color name="colorPrimaryDark">#1B5E20</color>
+    <color name="colorAccent">#81C784</color>
+    <color name="gray">#757575</color>
 
 
         <color name="primaryColor">#2196F3</color>
