--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -14,6 +14,17 @@
         android:adjustViewBounds="true"
         android:src="@drawable/rgr_registerpage_top"
         android:contentDescription="@null" />
+    <ImageButton
+        android:id="@+id/backButton"
+        android:layout_width="33dp"
+        android:layout_height="33dp"
+        android:layout_margin="16dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:contentDescription="@string/previous"
+        android:background="#006A00"
+        android:src="@drawable/back"
+        android:scaleType="centerInside" />
 
 
 
