--- a/app/src/main/res/layout/activity_student_home_page.xml
+++ b/app/src/main/res/layout/activity_student_home_page.xml
@@ -19,15 +19,7 @@
         android:layout_height="match_parent"
         android:background="@color/Layout_Background">
 
-        <!-- ============================= -->
-        <!--       Your Existing Layout   -->
-        <!--    (NestedScrollView, etc.)  -->
-        <!-- ============================= -->
-        <!--
-             Copy the entire XML you had for the screen into here.
-             Below is your original code, unchanged:
 
-        -->
 
         <!-- Top card view start -->
         <com.google.android.material.card.MaterialCardView
@@ -209,11 +201,11 @@
 
                         <ImageView
                             android:id="@+id/statusIcon"
-                            android:layout_width="45dp"
-                            android:layout_height="45dp"
+                            android:layout_width="50dp"
+                            android:layout_height="50dp"
                             android:layout_gravity="center_vertical"
                             android:layout_marginEnd="5dp"
-                            android:src="@drawable/student_icon"
+                            android:src="@drawable/studentpp"
                             android:contentDescription="Status Icon" />
 
                         <LinearLayout
