--- a/app/src/main/res/layout/activity_teacher_homepage.xml
+++ b/app/src/main/res/layout/activity_teacher_homepage.xml
@@ -35,6 +35,7 @@
             android:layout_marginEnd="0dp"
             app:cardBackgroundColor="@color/Theme_green"
             app:cardElevation="8dp"
+            android:background="@color/Layout_Background"
             app:cardPreventCornerOverlap="true"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -78,6 +79,20 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintHorizontal_bias="0.5" />
 
+                <ImageView
+                    android:id="@+id/searchIcon"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:layout_marginStart="0dp"
+                    android:layout_marginEnd="15dp"
+                    android:src="@drawable/ic_search"
+                    app:tint="@color/white"
+                    android:adjustViewBounds="true"
+                    android:contentDescription="Search Icon"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"/>
+
             </androidx.constraintlayout.widget.ConstraintLayout>
 
         </com.google.android.material.card.MaterialCardView>
@@ -87,7 +102,7 @@
             android:id="@+id/nestedScrollView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="30dp"
             android:fillViewport="true"
             >
 
@@ -102,72 +117,9 @@
 
 
 
-                <!-- Search bar Start -->
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/searchBar"
-                    android:layout_width="0dp"
-                    android:layout_height="45dp"
-                    app:cardCornerRadius="25dp"
-                    app:cardElevation="8dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginEnd="16dp"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    android:background="@android:color/white"
-                    tools:ignore="MissingConstraints">
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="horizontal"
-                        android:padding="8dp"
-                        android:gravity="center_vertical">
 
-                        <ImageView
-                            android:id="@+id/searchIcon"
-                            android:layout_width="24dp"
-                            android:layout_height="24dp"
-                            android:layout_marginStart="8dp"
-                            android:layout_marginEnd="18dp"
-                            android:src="@drawable/ic_search"
-                            android:contentDescription="Search Icon" />
 
-                        <EditText
-                            android:id="@+id/searchEditText"
-                            android:layout_width="0dp"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1"
-                            android:hint="Search"
-                            android:textColorHint="#808080"
-                            android:textColor="#000000"
-                            android:background="@android:color/transparent"
-                            android:padding="0dp"
-                            android:gravity="center_vertical" />
-
-                        <ImageView
-                            android:id="@+id/twoDotsIcon"
-                            android:layout_width="24dp"
-                            android:layout_height="24dp"
-                            android:layout_marginEnd="18dp"
-                            android:src="@drawable/two_dots"
-                            android:contentDescription="Two Dots Icon" />
-
-                    </LinearLayout>
-                </androidx.cardview.widget.CardView>
-                <!-- Search bar Ends -->
-
-                <ImageView
-                    android:id="@+id/Divider"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:adjustViewBounds="true"
-                    android:layout_marginTop="10dp"
-                    android:src="@drawable/division"
-                    android:contentDescription="@null"
-                    app:layout_constraintTop_toBottomOf="@id/searchBar"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent" />
 
                 <!-- "Hi, Admin" -->
                 <LinearLayout
@@ -177,8 +129,8 @@
                     android:orientation="horizontal"
                     android:layout_marginTop="10dp"
                     android:paddingStart="16dp"
-                    app:layout_constraintTop_toBottomOf="@id/Divider"
-                    app:layout_constraintStart_toStartOf="parent">
+                    app:layout_constraintStart_toStartOf="parent"
+                    tools:ignore="MissingConstraints">
 
                     <TextView
                         android:id="@+id/hiText"
@@ -247,7 +199,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
-                        android:paddingStart="8dp"
+
                         android:paddingEnd="8dp">
                         <androidx.cardview.widget.CardView
                             android:id="@+id/profilePictureCard"
@@ -274,42 +226,33 @@
 
                         </androidx.cardview.widget.CardView>
 
-                        <LinearLayout
+                        <androidx.constraintlayout.widget.ConstraintLayout
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
-                            android:gravity="start"
-                            android:layout_marginLeft="5dp"
-                            android:orientation="vertical">
+                            android:layout_marginLeft="5dp">
 
-                            <LinearLayout
-                                android:layout_width="match_parent"
+                            <TextView
+                                android:id="@+id/tv_teacher_name"
+                                android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:orientation="horizontal"
+                                android:text="Teacher"
+                                android:textStyle="bold"
+                                android:textColor="#006A00"
+                                android:textSize="18sp"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toTopOf="parent" />
 
-                                >
-                                <TextView
-                                    android:id="@+id/tv_teacher_name"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:text="Teacher "
-                                    android:textStyle="bold"
-                                    android:textColor="#006A00"
-                                    android:textSize="18sp" />
-
-                                <TextView
-                                    android:id="@+id/tv_acronym"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:text="Acronym"
-                                    android:layout_marginLeft="140dp"
-                                    android:textColor="#006A00"
-                                    android:textSize="16sp" />
-                            </LinearLayout>
-
-
-
-
+                            <TextView
+                                android:id="@+id/tv_acronym"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Acronym"
+                                android:textColor="#006A00"
+                                android:textSize="16sp"
+                                app:layout_constraintTop_toTopOf="@id/tv_teacher_name"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                android:layout_marginStart="8dp"/>
 
                             <TextView
                                 android:id="@+id/tv_designation"
@@ -318,17 +261,22 @@
                                 android:text="Designation"
                                 android:textColor="#006A00"
                                 android:textSize="16sp"
-                               />
-
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toBottomOf="@id/tv_teacher_name"
+                                 />
 
                             <TextView
                                 android:id="@+id/tv_email"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="email@gmail.com "
+                                android:text="email@gmail.com"
                                 android:textColor="#006A00"
-                                android:textSize="15sp" />
-                        </LinearLayout>
+                                android:textSize="15sp"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toBottomOf="@id/tv_designation"
+                                />
+                        </androidx.constraintlayout.widget.ConstraintLayout>
+
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
 
