--- a/app/src/main/res/layout/activity_teacher_info.xml
+++ b/app/src/main/res/layout/activity_teacher_info.xml
@@ -6,90 +6,87 @@
     android:id="@+id/drawerLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:backgroundTint="@color/Layout_Background"
+    android:background="@color/Layout_Background"
     tools:context=".Guest_HomePage">
 
 
     <FrameLayout
         android:id="@+id/mainContentContainer"
         android:layout_width="match_parent"
+        android:backgroundTint="@color/Layout_Background"
+        android:background="@color/Layout_Background"
         android:layout_height="match_parent">
 
-        <!-- ============================= -->
-        <!--       Your Existing Layout   -->
-        <!--    (NestedScrollView, etc.)  -->
-        <!-- ============================= -->
-        <!--
-             Copy the entire XML you had for the screen into here.
-             Below is your original code, unchanged:
-        -->
+        <!-- Top card view start (now inside AppBarLayout) -->
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/topCardView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_scrollFlags="scroll|enterAlways"
+            app:cardBackgroundColor="@color/Theme_green"
+            app:cardElevation="8dp"
+            app:cardPreventCornerOverlap="true"
+            app:shapeAppearanceOverlay="@style/CustomCardShape">
+
+            <!-- ConstraintLayout for your two images (left nav_bar and center new_home_top) -->
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <!-- ImageView for nav_bar on the left -->
+                <ImageView
+                    android:id="@+id/leftNavBarImage"
+                    android:layout_width="26dp"
+                    android:layout_height="22dp"
+                    android:layout_marginStart="20dp"
+                    android:adjustViewBounds="true"
+                    android:contentDescription="@null"
+                    android:scaleType="fitCenter"
+                    android:scaleX="1.5"
+                    android:scaleY="1.5"
+                    android:src="@drawable/back"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <!-- ImageView for new_home_top in the center -->
+                <ImageView
+                    android:id="@+id/selectRoleTopImage"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="-60dp"
+                    android:adjustViewBounds="true"
+                    android:scaleType="fitCenter"
+                    android:contentDescription="@null"
+                    android:src="@drawable/new_home_top"
+                    android:scaleX="1"
+                    android:scaleY="1"
+                    app:layout_constraintStart_toEndOf="@id/leftNavBarImage"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintHorizontal_bias="0.5" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </com.google.android.material.card.MaterialCardView>
+        <!-- Top card view ends -->
         <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginTop="20dp"
             android:fillViewport="true">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/main"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="50dp"
+                android:paddingTop="10dp"
                 android:background="@color/Layout_Background"
                 tools:context=".Guest_HomePage">
 
-                <!-- Top card view start -->
-                <com.google.android.material.card.MaterialCardView
-                    android:id="@+id/topCardView"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="0dp"
-                    android:layout_marginEnd="0dp"
-                    app:cardBackgroundColor="@color/Theme_green"
-                    app:cardElevation="8dp"
-                    app:cardPreventCornerOverlap="true"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:shapeAppearanceOverlay="@style/CustomCardShape">
 
-                    <androidx.constraintlayout.widget.ConstraintLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-
-                        <!-- LEFT NAV IMAGE (click to open drawer) -->
-                        <ImageView
-                            android:id="@+id/leftNavBarImage"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginStart="20dp"
-                            android:adjustViewBounds="true"
-                            android:scaleType="fitCenter"
-                            android:contentDescription="@null"
-                            android:src="@drawable/nev_bar"
-                            android:scaleX="1.5"
-                            android:scaleY="1.5"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent"
-                            app:layout_constraintBottom_toBottomOf="parent" />
-
-                        <!-- Center Image -->
-                        <ImageView
-                            android:id="@+id/selectRoleTopImage"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginStart="-60dp"
-                            android:adjustViewBounds="true"
-                            android:scaleType="fitCenter"
-                            android:contentDescription="@null"
-                            android:src="@drawable/new_home_top"
-                            android:scaleX="0.8"
-                            android:scaleY="0.8"
-                            app:layout_constraintStart_toEndOf="@id/leftNavBarImage"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintTop_toTopOf="parent"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintHorizontal_bias="0.5" />
-
-                    </androidx.constraintlayout.widget.ConstraintLayout>
-
-                </com.google.android.material.card.MaterialCardView>
-                <!-- Top card view Ends -->
 
                 <!-- Search bar Start -->
                 <androidx.cardview.widget.CardView
@@ -97,14 +94,16 @@
                     android:layout_width="0dp"
                     android:layout_height="45dp"
                     app:cardCornerRadius="25dp"
-                    app:cardElevation="8dp"
+                    app:cardElevation="4dp"
+                    android:paddingTop="10dp"
                     android:layout_marginTop="10dp"
                     android:layout_marginStart="16dp"
                     android:layout_marginEnd="16dp"
-                    app:layout_constraintTop_toBottomOf="@id/topCardView"
+                    app:layout_constraintStart_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    android:background="@android:color/white">
+                    android:background="@android:color/white"
+                    tools:ignore="MissingConstraints">
 
                     <LinearLayout
                         android:layout_width="match_parent"
