--- a/app/src/main/res/layout/activity_teacher_registration.xml
+++ b/app/src/main/res/layout/activity_teacher_registration.xml
@@ -15,6 +15,18 @@
         android:src="@drawable/rgr_registerpage_top"
         android:contentDescription="@null" />
 
+    <ImageButton
+        android:id="@+id/backButton"
+        android:layout_width="33dp"
+        android:layout_height="33dp"
+        android:layout_margin="16dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:contentDescription="@string/previous"
+        android:background="#006A00"
+        android:src="@drawable/back"
+        android:scaleType="centerInside" />
+
 
 
     <!-- Content Layout with ScrollView -->
