--- a/app/src/main/res/layout/teacher_card.xml
+++ b/app/src/main/res/layout/teacher_card.xml
@@ -13,122 +13,142 @@
         android:layout_marginTop="0dp"
         android:layout_marginBottom="0dp"
         app:cardCornerRadius="16dp"
-        app:cardElevation="8dp"
+        app:cardElevation="4dp"
         app:cardUseCompatPadding="true"
         app:cardPreventCornerOverlap="true"
         app:cardBackgroundColor="@color/white"
         app:contentPadding="8dp"
         app:strokeWidth="2dp">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:paddingStart="8dp"
-            android:paddingEnd="8dp">
 
-            <ImageView
-                android:id="@+id/statusIcon"
-                android:layout_width="45dp"
-                android:layout_height="45dp"
-                android:paddingEnd="8dp"
-                android:layout_gravity="center_vertical"
-                android:src="@drawable/student_icon"
-                android:contentDescription="Status Icon" />
 
-            <LinearLayout
-                android:layout_width="0dp"
+
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:paddingStart="0dp"
+                android:paddingEnd="4dp"
+                >
 
-                android:gravity="start|center_vertical"
-                android:layout_marginStart="5dp"
-                android:layout_marginEnd="5dp"
-                android:orientation="vertical">
+                <!-- Status Icon -->
+                <ImageView
+                    android:id="@+id/statusIcon"
+                    android:layout_width="45dp"
+                    android:layout_height="45dp"
 
-                <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:src="@drawable/student_icon"
+                    android:contentDescription="Status Icon"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"/>
+
+                <!-- Teacher Info Layout -->
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/infoLayout"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    app:layout_constraintTop_toBottomOf="@id/Divider"
-                    app:layout_constraintStart_toStartOf="parent">
+                    android:layout_marginStart="14dp"
+                    app:layout_constraintStart_toEndOf="@id/statusIcon"
+                    app:layout_constraintEnd_toStartOf="@id/contactLayout"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent">
 
-
-
+                    <!-- Acronym -->
                     <TextView
                         android:id="@+id/teacher_acronym"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-
-                        android:text="acronym"
+                        android:text="Acronym"
                         android:textSize="14sp"
                         android:textStyle="bold"
-                        android:textColor="@color/black" />
-                </LinearLayout>
+                        android:textColor="@color/black"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"/>
 
-                <TextView
-                    android:id="@+id/teacher_nameText"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Name"
-                    android:textColor="@color/black"
-                    android:textSize="12sp"
-                     />
+                    <!-- Teacher Name -->
+                    <TextView
+                        android:id="@+id/teacher_nameText"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Name"
+                        android:textColor="@color/black"
+                        android:textSize="12sp"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/teacher_acronym"
+                        android:layout_marginTop="3dp"/>
 
-
-
-
-
+                    <!-- Designation -->
                     <TextView
                         android:id="@+id/Designation"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-
                         android:text="Designation"
                         android:textSize="12sp"
                         android:textStyle="bold"
+                        android:textColor="@color/black"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/teacher_nameText"
+                        android:layout_marginTop="3dp"/>
 
-                        android:textColor="@color/black" />
-                <TextView
-                    android:id="@+id/dept"
+                    <!-- Department (Hidden Initially) -->
+                    <TextView
+                        android:id="@+id/dept"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="NO Task today"
+                        android:textColor="#006A00"
+                        android:visibility="gone"
+                        android:textSize="16sp"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/Designation"
+                        android:layout_marginTop="3dp"/>
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+                <!-- Contact Info Layout -->
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/contactLayout"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="NO Task today"
-                    android:textColor="#006A00"
-                    android:visibility="gone"
-                    android:textSize="16sp" />
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent">
 
-            </LinearLayout>
+                    <!-- Phone -->
+                    <TextView
+                        android:id="@+id/Cell"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Phone"
+                        android:textColor="@color/black"
+                        android:textSize="14sp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"/>
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:gravity="end"
-                android:layout_marginStart="5dp"
-                android:layout_gravity="center_vertical">
+                    <!-- Email -->
+                    <TextView
+                        android:id="@+id/teacher_email"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Email"
+                        android:textColor="@color/black"
+                        android:textSize="12sp"
+                        android:layout_marginBottom="4dp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/Cell"
+                        android:layout_marginTop="3dp"/>
+                </androidx.constraintlayout.widget.ConstraintLayout>
 
-                <TextView
-                    android:id="@+id/Cell"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="phone"
-                    android:textColor="@color/black"
-                    android:textSize="16sp" />
-                <TextView
-                    android:id="@+id/teacher_email"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Email"
-                    android:textColor="@color/black"
-                    android:textSize="14sp"
-
-                    android:layout_marginBottom="4dp" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-            </LinearLayout>
-        </LinearLayout>
-    </androidx.cardview.widget.CardView>
+
+
+
+
+
+
+        </androidx.cardview.widget.CardView>
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
