--- a/app/src/main/res/layout/activity_admin_home_page.xml
+++ b/app/src/main/res/layout/activity_admin_home_page.xml
@@ -291,6 +291,7 @@
                                 android:textColor="#006A00"
                                 android:textSize="16sp"
                                 android:textStyle="bold"
+                                android:visibility="gone"
                                 android:layout_marginBottom="4dp" />
 
                             <TextView
@@ -298,6 +299,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="NO Approval Request"
+                                android:visibility="gone"
                                 android:textColor="#006A00"
                                 android:textSize="16sp" />
                         </LinearLayout>
